# myiagi-widget

./: .nojekyll  CLAUDE.md  README.md  pyproject.toml  robots.txt  search.json  sitemap.xml
api/: get_expression.html  index.html  randomExpression.html  run.html
conda-build/: meta.yaml
docs/: README.md  _quarto.yml  objects.txt
docs/api/: _sidebar.yml  get_expression.qmd  index.qmd  randomExpression.qmd  run.qmd
docs/pages/: example.ipynb  overview.ipynb
pages/: example.html  overview.html
src/myiagi_widget/: app.css  app.py  controls.py  expressions.py
test/: conftest.py  test_app_smoke.py  test_controls.py  test_expressions.py  test_scoring.py
