[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "myiagi-widget"
version = "0.1.2"
description = "Terminal trainer game where students reorder the shuffled evaluation steps of a random Python expression back into the correct order"
authors = [
    {name = "Kasper Munch", email = "kaspermunch@birc.au.dk"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "steps-widget>=0.2.1,<0.3",
    "textual>=0.60",
    "rich>=13",
    "pygments>=2.16",
    "art>=6.0",
]

[project.urls]
Homepage = "https://github.com/munch-group/myiagi-widget"
Repository = "https://github.com/munch-group/myiagi-widget"
Documentation = "https://munch-group.org/myiagi-widget"

[project.scripts]
myiagi = "myiagi_widget.app:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.pixi.workspace]
channels = ["conda-forge", "sepandhaghighi", "munch-group"]
platforms = ["osx-arm64",  "linux-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
pytest = "*"
pytest-asyncio = "*"
textual = "*"
rich = "*"
pygments = "*"
art = "*"
quarto = ">=1.9.38,<2"
quartodoc = ">=0.11.1,<0.12"
# quartodoc 0.11.1's conda-forge package declares an unbounded "griffe>=0.33"
# runtime dependency, but hardcodes a numpy-docstring parser option
# ("allow_section_blank_line") that griffe 2.x removed from parse_numpy()'s
# signature -- an upstream packaging gap (missing "<2" cap), not a
# myiagi-widget bug. Pin griffe below 2 here until quartodoc/conda-forge fixes
# their own bound (see steps-widget's pyproject.toml for the same pin).
griffe = "<2"
nbconvert = "*"
pip = ">=25.2,<26"
nodejs = ">=20,<23"
git = "*"
gh = "*"
ipython = "*"

# steps-widget isn't published to PyPI/conda-forge yet, and pixi refuses a
# [tool.pixi.pypi-dependencies] override for a name that's already in
# [project.dependencies] ("steps-widget is already a dependency"), so `pixi
# install` can't solve this workspace until steps-widget has a release.
# Until then, develop/test against a plain venv with steps-widget installed
# from the sibling checkout instead (see CLAUDE.md's "Environment & commands"
# section) -- pixi needs no changes once steps-widget is published.

[tool.pixi.environments]
default = {solve-group = "default"}

[tool.pixi.tasks.init]
cmd = "python ./scripts/rename.py && gh repo set-default https://github.com/munch-group/$(basename $(git rev-parse --show-toplevel)) && git add src && git add -u"

[tool.pixi.tasks.install-dev]
cmd = "pip install --no-build-isolation --force-reinstall --no-deps -e ."
description = "Development install"

[tool.pixi.tasks.notebook]
args = [ { "arg" = "notebook" } ]
cmd = "jupyter nbconvert --log-level=WARN --to notebook --execute --inplace --TagRemovePreprocessor.enabled=True --TagRemovePreprocessor.remove_cell_tags='{\"skip-execution\"}' {{ notebook }}"

[tool.pixi.tasks.api]
cmd = "./scripts/docs-build-render.sh"
description = "Build quartodoc api doc pages"

[tool.pixi.tasks.docs]
cmd = "./scripts/docs-run-notebooks.sh"
description = "Execute documentation notebooks in-place"

[tool.pixi.tasks.clean]
cmd = "git clean -id"
description = "Removes untracked files and directories but respects your .gitignores"

[tool.pixi.tasks.test]
cmd = "pytest test/"
description = "Run the pytest suite"

[tool.pixi.tasks.commit]
cmd = "./scripts/git-commit.sh"

[tool.pixi.tasks.bump]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump'"

[tool.pixi.tasks.release]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump' && git push && ./scripts/github-release.sh"
description = "Bump version patch and push tag to build/upload conda/pypi packages"

[tool.pixi.tasks.version]
args = [
  { "arg" = "kind", "default" = "patch" },  # can be patch, minor, major
  { "arg" = "flag", "default" = "" },     # can be --pre, --release
]
cmd = "./scripts/bump_version.py --{{ kind }} {{ flag }} && git add pyproject.toml && git commit -m '{{ kind }} {{ flag }} version bump' && git push && ./scripts/github-release.sh"
depends-on = ["test", "api", "docs", "commit"]
description = "Bump version patch and push tag to build/upload conda/pypi packages"


[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
